请注意需要在项目下gradle.properties添加以下内容，具体参看demo：org.gradle.jvmargs=-Xmx1536M -Dfile.encoding=UTF-8 --add-opens=java.base/java.io=ALL-UNNAMED